[package]
name = "dex-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
dotenv = "0.15"
log = "0.4"
env_logger = "0.10"
dashmap = "5.5"
teloxide = { version = "0.12", features = ["macros"] }
solana-client = "3.1.7"
solana-sdk = "3.0.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres"] }
futures-util = "0.3.31"
bs58 = "0.5.1"
