[package]
name = "dex-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
dotenv = "0.15"
log = "0.4"
env_logger = "0.10"
dashmap = "5.5"
teloxide = { version = "0.12", features = ["macros"] }
